Fix jococ unit test